<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/ScrollView01" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/mensaje1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background" />
        </LinearLayout>

        <RadioGroup android:id="@+id/RadioGroup01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:text="@string/saludo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:text="@string/saludoSr"
                android:id="@+id/rdsr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                </RadioButton>

            <RadioButton
                android:text="@string/saludoSra"
                android:id="@+id/rdsra"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                </RadioButton>
        </RadioGroup>
        <RadioGroup android:id="@+id/RadioGroup02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:text="@string/Hola_adios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:text="@string/Hola"
                android:id="@+id/hola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </RadioButton>

            <RadioButton
                android:text="@string/Adios"
                android:id="@+id/adios"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </RadioButton>
        </RadioGroup>
        <CheckBox
            android:text="@string/showTime"
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            </CheckBox>

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            </TimePicker>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            </DatePicker>
        <Button
            android:id="@+id/hello"
            android:text="@string/hello"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center">

            </Button>
        <TextView
            android:id="@+id/out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
